[gd_scene load_steps=21 format=3 uid="uid://bujmes7jfhu40"]

[ext_resource type="Script" path="res://2d/source/scripts/game/game_ui.gd" id="1"]
[ext_resource type="Script" path="res://2d/source/scripts/game/game_ui_sub/audio.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://b5drjdty1csrs" path="res://audio/ambient/water.ogg" id="4"]
[ext_resource type="AudioStream" uid="uid://c3jp1ujs05yx8" path="res://audio/ambient/wind.ogg" id="5"]
[ext_resource type="AudioStream" uid="uid://cdlqf1jnhvdbj" path="res://audio/sound/confirm.ogg" id="6"]
[ext_resource type="PackedScene" uid="uid://cupwku7ga8cm" path="res://2d/source/scenes/game/game_world.tscn" id="6_0utkr"]
[ext_resource type="PackedScene" uid="uid://sxw2tmihs4l4" path="res://2d/source/scenes/game/game_ui_sub/magic_panel.tscn" id="6_3sob5"]
[ext_resource type="PackedScene" uid="uid://y8jcx17wksgm" path="res://2d/source/scenes/game/game_ui_sub/potion_scene.tscn" id="6_f2pni"]
[ext_resource type="PackedScene" uid="uid://d4n20t76352sp" path="res://2d/source/scenes/game/game_ui_sub/player_controls.tscn" id="6_lh1jc"]
[ext_resource type="PackedScene" uid="uid://b1dl1rpchwip" path="res://2d/source/scenes/game/game_ui_sub/client_ui.tscn" id="6_ni203"]
[ext_resource type="PackedScene" uid="uid://b67pw1ph33bu4" path="res://2d/source/scenes/game/game_ui_sub/hud.tscn" id="6_xj1ii"]
[ext_resource type="PackedScene" uid="uid://cfy4p73d1v7dt" path="res://2d/source/scenes/common/player_stats.tscn" id="7_vqjwp"]
[ext_resource type="PackedScene" uid="uid://8oq68h8n4dss" path="res://3d/scenes/artifacts_scene.tscn" id="8_kc176"]
[ext_resource type="PackedScene" uid="uid://d3udpxano1o1b" path="res://2d/source/scenes/game/game_ui_sub/inventory_panel.tscn" id="13_4kih2"]
[ext_resource type="PackedScene" uid="uid://brymas4up5s80" path="res://2d/source/scenes/game/child_scene/tile_summary.tscn" id="14_3ld2q"]
[ext_resource type="PackedScene" uid="uid://bs4n3h7otikf0" path="res://2d/source/scenes/game/child_scene/game_help.tscn" id="15_3k5po"]
[ext_resource type="PackedScene" uid="uid://u1hr25to3341" path="res://2d/source/scenes/game/child_scene/rune_help.tscn" id="16_ea4f4"]
[ext_resource type="PackedScene" uid="uid://dkru3osu15bj6" path="res://2d/source/scenes/game/child_scene/rune_buying.tscn" id="17_txgwi"]
[ext_resource type="PackedScene" uid="uid://brdjbwco52fs0" path="res://2d/source/scenes/dialog/rune_casted.tscn" id="18_sa2eg"]
[ext_resource type="PackedScene" uid="uid://cl6kqe7r4gvey" path="res://2d/source/scenes/battle/battle.tscn" id="19_13638"]

[node name="game_ui" type="Control" groups=["game_ui"]]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="Audio" type="Node2D" parent="." groups=["game_audio"]]
script = ExtResource("2")

[node name="SoundWalkTimer" type="Timer" parent="Audio"]
wait_time = 0.15

[node name="MusicScene" type="AudioStreamPlayer" parent="Audio"]
volume_db = -5.0

[node name="MusicBattle" type="AudioStreamPlayer" parent="Audio"]
volume_db = -5.0

[node name="SoundWalk" type="AudioStreamPlayer" parent="Audio"]
volume_db = 4.0

[node name="SoundGoodbye" type="AudioStreamPlayer" parent="Audio"]

[node name="SoundDoor" type="AudioStreamPlayer" parent="Audio"]

[node name="SoundClick" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6")

[node name="AmbientWater" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4")
volume_db = -10.0

[node name="SoundPuzzle" type="AudioStreamPlayer" parent="Audio"]

[node name="AmbientWind" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5")
volume_db = -10.0

[node name="2dMainMap" parent="." instance=ExtResource("6_0utkr")]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 608.0
offset_bottom = 352.0

[node name="Hud" parent="." instance=ExtResource("6_xj1ii")]

[node name="PotionScene" parent="." instance=ExtResource("6_f2pni")]

[node name="ClientScene" parent="." instance=ExtResource("6_ni203")]

[node name="PlayerControls" parent="." instance=ExtResource("6_lh1jc")]

[node name="ArtifactsScene" parent="." instance=ExtResource("8_kc176")]

[node name="PlayerStatsPanel" parent="." instance=ExtResource("7_vqjwp")]

[node name="MagicPanel" parent="." instance=ExtResource("6_3sob5")]

[node name="InventoryPanel" parent="." instance=ExtResource("13_4kih2")]

[node name="TileSummary" parent="." instance=ExtResource("14_3ld2q")]
visible = false

[node name="GameHelpScene" parent="." instance=ExtResource("15_3k5po")]
visible = false

[node name="RuneHelpScene" parent="." instance=ExtResource("16_ea4f4")]
visible = false

[node name="RuneBuyingScene" parent="." instance=ExtResource("17_txgwi")]
visible = false

[node name="RuneCastedDialog" parent="." instance=ExtResource("18_sa2eg")]
visible = false

[node name="BattleScene" parent="." instance=ExtResource("19_13638")]
visible = false

[connection signal="timeout" from="Audio/SoundWalkTimer" to="Audio" method="_on_sound_WalkTimer_timeout"]
